Atualiza a data de expiração nos endpoints e na documentação para '2052-04-10'. Adiciona nova rota para consulta de categorias de produtos pelo código interno no SiteMercadoController, incluindo validação de dados e tratamento de erros. Atualiza a documentação da API para refletir as mudanças nas rotas e exemplos de requisições/respostas.
